--- a/src/app.html
+++ b/src/app.html
@@ -9,5 +9,28 @@
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+            https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-firestore.js"></script>
+        <script>
+            // Your web app's Firebase configuration
+            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+            var firebaseConfig = {
+                apiKey: "AIzaSyA3nvUwcIbPuU1qxJ0U9HIDfUXkS0X0HHQ",
+                authDomain: "dress-catalog.firebaseapp.com",
+                projectId: "dress-catalog",
+                storageBucket: "dress-catalog.appspot.com",
+                messagingSenderId: "872477903513",
+                appId: "1:872477903513:web:fb7c6d515c8d1fbfa50608",
+                measurementId: "G-GHYJBN5Y9Z"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+        </script>
 	</body>
 </html>
