--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
 		%svelte.head%
 	</head>
 	<body>
@@ -16,6 +15,7 @@
         <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-analytics.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-storage.js"></script>
         <script>
             // Your web app's Firebase configuration
             // For Firebase JS SDK v7.20.0 and later, measurementId is optional
