--- a/src/app.html
+++ b/src/app.html
@@ -12,13 +12,13 @@
 	<body>
 		<div id="svelte">%svelte.body%</div>
 		<!-- The core Firebase JS SDK is always required and must be listed first -->
-		<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-app-compat.js"></script>
 		<!-- TODO: Add SDKs for Firebase products that you want to use
             https://firebase.google.com/docs/web/setup#available-libraries -->
-		<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-analytics.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-firestore.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-storage.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-analytics-compat.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-auth-compat.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-firestore-compat.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-storage-compat.js"></script>
 		<script>
 			// Your web app's Firebase configuration
 			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
